try to avoid flicker during style change. got rid of font-awesome.

--- a/css/basic.css
+++ b/css/basic.css
@@ -1,6 +1,5 @@
 html,body{
     margin:0px;
-    background-color: #F9F9F9;
 }
 html{
     padding-bottom:16px;
@@ -8,9 +7,6 @@ html{
 body{
     min-height:100%;
 }
-/* p{ */
-/*     margin:0px; */
-/* } */
 
 @media all and (min-width: 860px){
     div.page{
@@ -58,9 +54,6 @@ li:not(:last-child){
     margin-bottom: 5px;
 }
 
-/* li.biblio::before { */
-/*     content: "[" counter(biblio) "] "; */
-/* } */
 li.biblio { counter-increment: biblio;}
 
 @counter-style biblio{
@@ -102,7 +95,7 @@ table th, td {
 /* https://css-tricks.com/examples/hrs/ */
 /* based on */
 /* Inset, by Dan Eden */
-hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+/* hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bottom: 1px solid rgba(255, 255, 255, 0.3); } */
 
 .header{
     border-bottom:solid 1px;
@@ -112,7 +105,6 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
     border-top:solid 1px;
 }
 .title-banner{
-    background-color:rgb(161, 203, 201);
     padding:8px 10px;
     margin:0px 0px 16px 0px;
     border-radius: 5px;
@@ -120,7 +112,6 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
     text-shadow: 1px 1px 0px rgb(243,243,243);
 }
 .standout{
-    background-color:white;
     padding:8px 10px;
     margin:0px 0px 16px 0px;
     border-radius: 5px;
@@ -160,6 +151,10 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
 
 .hidden{
     display:none;
+}
+
+.invisible{
+    visibility:hidden;
 }
 
 .overlay-container{
@@ -268,7 +263,6 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
 .nuts-item {
     display:grid;
     grid-gap:.5rem;
-    background-color:white;
     padding:8px 10px 18px;
     border-radius: 5px;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
@@ -323,4 +317,14 @@ hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.5); border-bott
 
 .strikeout {
     text-decoration:line-through 2px;
+}
+
+.feather {
+  width: 24px;
+  height: 24px;
+  stroke: currentColor;
+  stroke-width: 3;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
 }
